[#24080] Fixed an issue with Assigned button not being aligned with user-name on task page.

--- a/app/assets/stylesheets/task.scss
+++ b/app/assets/stylesheets/task.scss
@@ -333,6 +333,10 @@ label .unread_icon {
   float: right;
 }
 
+#task_sidebar label .unread_icon {
+  margin: 0px;
+}
+
 .read .unread_icon {
   background-position: 0 12px; // disabled state
 }
